fix blockchain scrolling on mobile mode when RTL layout

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -494,4 +494,8 @@ th {
     .text-right {
         text-align: left !important;
     }
+
+    .bitcoin-block {
+        direction: rtl;
+    }
 }
